--- a/html/agradecimentos.html
+++ b/html/agradecimentos.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsivo.css">
-    <link rel="stylesheet" href="../css/fingers.css">
     <link rel="stylesheet" href="../css/noticias.css">
+    <link rel="stylesheet" href="../css/contato.css">
+    <link rel="stylesheet" href="../css/agradecimentos.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
@@ -37,63 +38,12 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section id="tulipa" class="section-fingers">
-        <div class="div-h2-tulipa">
-            <h2 id="h2-tulipa">Flex Gripper Soft Grippers</h2>
+    <section id="section-agradecimentos">
+        <div class="div-agradecimentos">
+            <h2 id="h2-agradecimentos">Obrigado!</h2>
         </div>
 
-        <div class="slide-container swiper">
-            <div class="slide-content">
-                <div class="card-wrapper swiper-wrapper">
-                    <div class="card swiper-slide">
-                        <div class="image-content">
-                            <span class="overlay"></span>
-
-                            <div class="card-image">
-                                <img src="../imgs/flexgripper.png" alt="Imagem do Produtos: Fingers" class="card-img">
-                            </div>
-                        </div>
-
-                        <div class="card-content">
-                            <h2 class="name">Flex Gripper</h2>
-
-                            <p class="description">As FlexGrippers Soft Grippers são garras robóticas flexíveis feitas
-                                de material hiperelástico com câmaras de ar pressurizáveis, permitindo a manipulação de
-                                peças de até Ø10mm e não possuindo um corpo externo rígido, sendo adequadas para
-                                manusear objetos como garrafas, potes, frutas e outros produtos com formas regulares e
-                                irregulares.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <section class="section-fingers-documentacao">
-            <div class="div-h2-documentacao">
-                <h2 id="h2-documentacao">Baixe a Documentação</h2>
-
-                <p class="p-documentacao">Clique Abaixo</p>
-            </div>
-
-            <div class="div-baixar">
-                <div id="div-baixar2">
-                    <i id="pdf-baixar" class='bx bxs-file-pdf'></i>
-
-                    <p id="p-documentacao">flexgrippers.pdf</p>
-                </div>
-
-                <a href="../docs/flexgrippers.pdf" target="_blank"><i id="icon-baixar" class='bx bx-download'></i></a>
-            </div>
-
-            <div class="card-content2">
-                <h2 class="name">Veja Aplicações</h2>
-
-                <iframe id="video-produtos" src="https://www.youtube.com/embed/9hOzeJq7XLU?autoplay=1&mute=1"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
-        </section>
+        <a href="../index.html" class="back-home">Voltar para Home</a>
     </section>
     <!-- MAIN ======================================= -->
 
