--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/responsivo.css">
-    <link rel="stylesheet" href="../css/noticias.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/responsivo.css">
+    <link rel="stylesheet" href="css/noticias.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
+    <link rel="shorticon icon" type="image/gif" href="imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
 </head>
 
@@ -19,14 +19,14 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
+        <a href="index.html"><img src="imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="noticias.html">Notícias</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="html/sobre.html">Sobre</a></li>
+            <li><a href="html/produtos.html">Produtos</a></li>
+            <li><a href="html/noticias.html">Notícias</a></li>
+            <li><a href="html/contato.html">Contato</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon">
@@ -40,14 +40,14 @@
 
         <div class="container-video">
             <video autoplay loop muted plays-inline class="background-clip">
-                <source src="../videos/video.mp4" type="video/mp4">
+                <source src="videos/video.mp4" type="video/mp4">
             </video>
         </div>
 
         <div class="home-text">
             <div class="button">
-                <a href="produtos.html" target="_blank" class="btn">Produtos</a>
-                <a href="contato.html" target="_blank" class="btn2">Contato</a>
+                <a href="html/produtos.html" target="_blank" class="btn">Produtos</a>
+                <a href="html/contato.html" target="_blank" class="btn2">Contato</a>
             </div>
 
             <div>
@@ -62,7 +62,7 @@
             <div class="hero">
                 <figure>
                     <video loop="loop" muted="muted" autoplay="autoplay">
-                        <source src="../videos/video.mp4" />
+                        <source src="videos/video.mp4" />
                     </video>
                 </figure>
             </div>
@@ -76,33 +76,33 @@
             <h2>Nossos Produtos</h2>
         </div>
 
-        <div class="produtos-content" onclick="location.href='../html/tulipa.html';">
+        <div class="produtos-content" onclick="location.href='html/tulipa.html';">
             <div id="row1" class="row">
-                <img src="../imgs/tulipa.png" alt="Imagem do Produto: Tulipa">
+                <img src="imgs/tulipa.png" alt="Imagem do Produto: Tulipa">
                 <div class="layer">
                     <h5>Tulipa</h5>
                     <p>Saiba Mais</p>
-                    <a href="../html/tulipa.html"><i id="link-icon" class='bx bx-link-external'></i></a>
+                    <a href="html/tulipa.html"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
 
         <div class="produtos-content2">
-            <div id="row2" class="row" onclick="location.href='../html/fingers.html';">
-                <img src="../imgs/fingers.png" alt="Imagem do Produto: Fingers">
+            <div id="row2" class="row" onclick="location.href='html/fingers.html';">
+                <img src="imgs/fingers.png" alt="Imagem do Produto: Fingers">
                 <div class="layer">
                     <h5>Fingers</h5>
                     <p>Saiba Mais</p>
-                    <a href="../html/fingers.html"><i id="link-icon" class='bx bx-link-external'></i></a>
+                    <a href="html/fingers.html"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
-            <div id="row3" class="row" onclick="location.href='../html/flexgrippers.html';">
-                <img src="../imgs/flexgripper.png" alt="Imagem do Produto: FlexGripper">
+            <div id="row3" class="row" onclick="location.href='html/flexgrippers.html';">
+                <img src="imgs/flexgripper.png" alt="Imagem do Produto: FlexGripper">
                 <div class="layer">
                     <h5>FlexGripper</h5>
                     <p>Saiba Mais</p>
-                    <a href="../html/flexgrippers.html"><i id="link-icon" class='bx bx-link-external'></i></a>
+                    <a href="html/flexgrippers.html"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
         <p class="detalhes-p">Clique Abaixo</p>
 
         <div class="button2">
-            <a href="produtos.html" id="detalhes-button" class="btn">VER PRODUTOS</a>
+            <a href="html/produtos.html" id="detalhes-button" class="btn">VER PRODUTOS</a>
         </div>
     </div>
     <!-- PRODUTOS =================================== -->
@@ -125,7 +125,7 @@
             <!-- post box 1 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Soft Grippers
                 </a>
 
@@ -140,7 +140,7 @@
             <!-- post box 2 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Contato
                 </a>
 
@@ -158,7 +158,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                <a href="index.html"><img src="imgs/logo-branco.png" id="logo-footer"
                         alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
@@ -190,8 +190,10 @@
     </section>
     <!-- FOOTER ===================================== -->
 
-    <script src="../js/script.js"></script>
-    <script src="../js/animacao-seta.js"></script>
+    <a href="#" class="go-top-btn"><i class='bx bx-chevron-up'></i></a>
+
+    <script src="js/script.js"></script>
+    <script src="js/animacao-seta.js"></script>
 </body>
 
 </html>
