--- a/html/contato.html
+++ b/html/contato.html
@@ -20,10 +20,10 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
+        <a href="../index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="noticias.html">Notícias</a></li>
@@ -45,12 +45,14 @@
         </div>
 
         <div class="contact-form">
-            <form action="">
-                <input autofocus id="nome" type="name" placeholder="Seu Nome" required>
-                <input type="email" placeholder="Seu Email" required>
-                <input type="" placeholder="Seu Telefone" required>
-                <textarea name="" id="" cols="35" rows="10" placeholder="Como posso te ajudar?" required></textarea>
+            <form action="https://formsubmit.co/info@softgrippers.com" method="POST">
+                <input autofocus id="nome" type="name" name="name" placeholder="Nome" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="" name="phone" placeholder="Telefone" required>
+                <textarea name="message" id="" cols="35" rows="10" placeholder="Como podemos te ajudar?" required></textarea>
                 <input type="submit" value="ENVIAR MENSAGEM" class="submit" required>
+
+                <input type="hidden" name="_next" value="../html/agradecimentos.html">    
             </form>
         </div>
     </section>
@@ -62,7 +64,7 @@
             <!-- post box 1 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Soft Grippers
                 </a>
 
@@ -77,7 +79,7 @@
             <!-- post box 2 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Contato
                 </a>
 
@@ -95,7 +97,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                <a href="../index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
                         alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
@@ -126,6 +128,8 @@
         </div>
     </section>
     <!-- FOOTER ===================================== -->
+
+    <a href="#" class="go-top-btn"><i class='bx bx-chevron-up'></i></a>
 
     <script src="../js/script.js"></script>
 </body>
