--- a/html/pos-noticia4.html
+++ b/html/pos-noticia4.html
@@ -24,10 +24,10 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
+        <a href="../index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="noticias.html">Notícias</a></li>
@@ -157,7 +157,7 @@
         <div class="footer container-noticias">
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Soft Grippers
                 </a>
 
@@ -172,7 +172,7 @@
             <!-- post box 2 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Contato
                 </a>
 
@@ -190,7 +190,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                <a href="../index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
                         alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
@@ -221,6 +221,8 @@
         </div>
     </section>
     <!-- FOOTER ===================================== -->
+
+    <a href="#" class="go-top-btn"><i class='bx bx-chevron-up'></i></a>
 
     <script src="../js/script.js"></script>
     <script src="../js/noticias.js"></script>
