--- a/html/produtos.html
+++ b/html/produtos.html
@@ -21,10 +21,10 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
+        <a href="../index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="noticias.html">Notícias</a></li>
@@ -129,7 +129,7 @@
             <!-- post box 1 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Soft Grippers
                 </a>
 
@@ -144,7 +144,7 @@
             <!-- post box 2 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Contato
                 </a>
 
@@ -162,7 +162,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                <a href="../index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
                         alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
@@ -193,6 +193,8 @@
         </div>
     </section>
     <!-- FOOTER ===================================== -->
+
+    <a href="#" class="go-top-btn"><i class='bx bx-chevron-up'></i></a>
 
     <script src="../js/script.js"></script>
     <script src="../js/swiper-bundle.min.js"></script>
