--- a/html/tulipa.html
+++ b/html/tulipa.html
@@ -20,10 +20,10 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt=""></a>
+        <a href="../index.html"><img src="../imgs/logo.png" class="logo" alt=""></a>
 
         <ul class="navlist">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="noticias.html">Notícias</a></li>
@@ -102,7 +102,7 @@
             <!-- post box 1 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Soft Grippers
                 </a>
 
@@ -117,7 +117,7 @@
             <!-- post box 2 -->
             <div class="footer-box">
 
-                <a href="pos-noticia.html" class="footer-title">
+                <a href="#" class="footer-title">
                     Contato
                 </a>
 
@@ -135,7 +135,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
+                <a href="../index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
             </div>
 
             <div id="footer-icons">
@@ -165,6 +165,8 @@
         </div>
     </section>
     <!-- FOOTER ===================================== -->
+
+    <a href="#" class="go-top-btn"><i class='bx bx-chevron-up'></i></a>
 
     <script src="../js/script.js"></script>
 </body>
