--- a/html/contato.html
+++ b/html/contato.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="contact-form">
-            <form action="https://formsubmit.co/info@softgrippers.com" method="POST">
+            <form action="https://formsubmit.co/vinicius@softgrippers.com" method="POST">
                 <input autofocus id="nome" type="name" name="name" placeholder="Nome" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="" name="phone" placeholder="Telefone" required>
@@ -53,6 +53,7 @@
                 <input type="submit" value="ENVIAR MENSAGEM" class="submit" required>
 
                 <input type="hidden" name="_next" value="../html/agradecimentos.html">    
+                <input type="hidden" name="_cc" value="info@softgrippers.com">
             </form>
         </div>
     </section>
