--- a/html/contato.html
+++ b/html/contato.html
@@ -53,7 +53,7 @@
                 <input type="submit" value="ENVIAR MENSAGEM" class="submit" required>
 
                 <input type="hidden" name="_next" value="../html/agradecimentos.html">    
-                <input type="hidden" name="_cc" value="info@softgrippers.com">
+                <input type="hidden" name="_cc" value="https://nigerade.github.io/Projeto-Soft-Grippers/html/agradecimentos.html">
             </form>
         </div>
     </section>
