--- a/html/contato.html
+++ b/html/contato.html
@@ -52,8 +52,8 @@
                 <textarea name="message" id="" cols="35" rows="10" placeholder="Como podemos te ajudar?" required></textarea>
                 <input type="submit" value="ENVIAR MENSAGEM" class="submit" required>
 
-                <input type="hidden" name="_next" value="../html/agradecimentos.html">    
-                <input type="hidden" name="_cc" value="https://nigerade.github.io/Projeto-Soft-Grippers/html/agradecimentos.html">
+                <input type="hidden" name="_next" value="https://nigerade.github.io/Projeto-Soft-Grippers/html/agradecimentos.html">    
+                <input type="hidden" name="_cc" value="info@softgrippers.com">
             </form>
         </div>
     </section>
