--- a/html/contato.html
+++ b/html/contato.html
@@ -52,7 +52,7 @@
                 <textarea name="message" id="" cols="35" rows="10" placeholder="Como podemos te ajudar?" required></textarea>
                 <input type="submit" value="ENVIAR MENSAGEM" class="submit" required>
 
-                <input type="hidden" name="_next" value="softgrippers.com/agradecimentos.html">    
+                <input type="hidden" name="_next" value="https://softgrippers.com/html/agradecimentos.html">    
                 <input type="hidden" name="_cc" value="info@softgrippers.com">
             </form>
         </div>
