--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
+        <a href="index"><img src="imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="html/sobre.html">Sobre</a></li>
-            <li><a href="html/produtos.html">Produtos</a></li>
-            <li><a href="html/noticias.html">Notícias</a></li>
-            <li><a href="html/contato.html">Contato</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="html/sobre">Sobre</a></li>
+            <li><a href="html/produtos">Produtos</a></li>
+            <li><a href="html/noticias">Notícias</a></li>
+            <li><a href="html/contato">Contato</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon">
@@ -46,8 +46,8 @@
 
         <div class="home-text">
             <div class="button">
-                <a href="html/produtos.html" target="_blank" class="btn">Produtos</a>
-                <a href="html/contato.html" target="_blank" class="btn2">Contato</a>
+                <a href="html/produtos" target="_blank" class="btn">Produtos</a>
+                <a href="html/contato" target="_blank" class="btn2">Contato</a>
             </div>
 
             <div>
@@ -64,33 +64,33 @@
             <h2>Nossos Produtos</h2>
         </div>
 
-        <div class="produtos-content" onclick="location.href='html/tulipa.html';">
+        <div class="produtos-content" onclick="location.href='html/tulipa';">
             <div id="row1" class="row">
                 <img src="imgs/tulipa.png" alt="Imagem do Produto: Tulipa">
                 <div class="layer">
                     <h5>Tulipa</h5>
                     <p>Saiba Mais</p>
-                    <a href="html/tulipa.html"><i id="link-icon" class='bx bx-link-external'></i></a>
+                    <a href="html/tulipa"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
 
         <div class="produtos-content2">
-            <div id="row2" class="row" onclick="location.href='html/fingers.html';">
+            <div id="row2" class="row" onclick="location.href='html/fingers';">
                 <img src="imgs/fingers.png" alt="Imagem do Produto: Fingers">
                 <div class="layer">
                     <h5>Fingers</h5>
                     <p>Saiba Mais</p>
-                    <a href="html/fingers.html"><i id="link-icon" class='bx bx-link-external'></i></a>
+                    <a href="html/fingers"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
-            <div id="row3" class="row" onclick="location.href='html/flexgrippers.html';">
+            <div id="row3" class="row" onclick="location.href='html/flexgrippers';">
                 <img src="imgs/flexgripper.png" alt="Imagem do Produto: FlexGripper">
                 <div class="layer">
                     <h5>FlexGripper</h5>
                     <p>Saiba Mais</p>
-                    <a href="html/flexgrippers.html"><i id="link-icon" class='bx bx-link-external'></i></a>
+                    <a href="html/flexgrippers"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
         <p class="detalhes-p">Clique Abaixo</p>
 
         <div class="button2">
-            <a href="html/produtos.html" id="detalhes-button" class="btn">VER PRODUTOS</a>
+            <a href="html/produtos" id="detalhes-button" class="btn">VER PRODUTOS</a>
         </div>
     </div>
     <!-- PRODUTOS =================================== -->
@@ -146,7 +146,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="imgs/logo-branco.png" id="logo-footer"
+                <a href="index"><img src="imgs/logo-branco.png" id="logo-footer"
                         alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
